creacion bpmn pruebas finales
creacion bpmn en camunda
 pruebas finales levantamiento de microservicios y frontend usando react + vite