@@ -1,16 +1,13 @@
 package com.editorial.authors.authors_service.authors.application.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
 
-import com.editorial.authors.api.request.CreateAuthorRequest;
-import com.editorial.authors.api.response.AuthorResponse;
-import com.editorial.authors.application.service.AuthorService;
 import com.editorial.authors.authors_service.authors.api.mapper.AuthorMapper;
+import com.editorial.authors.authors_service.authors.api.request.CreateAuthorRequest;
+import com.editorial.authors.authors_service.authors.api.response.AuthorResponse;
+import com.editorial.authors.authors_service.authors.application.service.AuthorService;
 import com.editorial.authors.authors_service.authors.domain.model.Author;
 import com.editorial.authors.authors_service.authors.repository.AuthorRepository;
 
@@ -18,41 +15,35 @@ import com.editorial.authors.authors_service.authors.repository.AuthorRepository
 public class AuthorServiceImpl implements AuthorService {
 
     private final AuthorRepository authorRepository;
+    private final AuthorMapper authorMapper;
 
-    public AuthorServiceImpl(AuthorRepository authorRepository) {
+    public AuthorServiceImpl(
+            AuthorRepository authorRepository,
+            AuthorMapper authorMapper
+    ) {
         this.authorRepository = authorRepository;
+        this.authorMapper = authorMapper;
     }
 
     @Override
     public AuthorResponse createAuthor(CreateAuthorRequest request) {
-        Author author = AuthorMapper.toEntity(request);
-        Author savedAuthor = authorRepository.save(author);
-        return AuthorMapper.toResponse(savedAuthor);
+        Author author = authorMapper.toEntity(request);
+        Author saved = authorRepository.save(author);
+        return authorMapper.toResponse(saved);
     }
 
     @Override
     public List<AuthorResponse> getAllAuthors() {
         return authorRepository.findAll()
                 .stream()
-                .map(AuthorMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(authorMapper::toResponse)
+                .toList();
     }
 
     @Override
     public AuthorResponse getAuthorById(Long id) {
-        return authorRepository.findById(id)
-                .map(author -> new AuthorResponse(
-                        author.getId(),
-                        author.getName(),
-                        author.getEmail(),
-                        author.getBiography(),
-                        author.getCreatedAt()
-                ))
-                .orElseThrow(() ->
-                        new ResponseStatusException(
-                                HttpStatus.NOT_FOUND,
-                                "Autor no encontrado con ID: " + id
-                        )
-                );
+        Author author = authorRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Author not found"));
+        return authorMapper.toResponse(author);
     }
 }
